fixed grafite spacing

--- a/grafitestyles.css
+++ b/grafitestyles.css
@@ -52,14 +52,14 @@ html, body{
 #homebutton{
   position: absolute;
   top: 0;
-  left: 3.7vw;
+  left: 10.5vh;
   height: 9vh;
   background-color: white;
   border: none;
   outline: none;
-  width: 10vw;
+  /*width: 10vw;*/
   font-family: 'Exo 2', sans-serif;
-  font-size: 2vw;
+  font-size: 2.5em;
 }
 
 #donatebutton{
@@ -199,7 +199,7 @@ html, body{
   display: grid;
   width: 58em;
   margin: 0 auto;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   grid-template-columns: 27em 27em;
   grid-column-gap: 4em;
   grid-row-gap: 2vh;
